test_regress/t/t_param_circ_bad.out
%Error: t/t_param_circ_bad.v:13:15: Variable's initial value is circular: 'X'
                                  : ... note: In instance 't.sub'
   13 |     parameter X = WIDTH
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
